# Excel_Correo

./: .gitignore  README.md  main.py  pyproject.toml
FastApi/: main.py
api/: main.py
api/routers/: email_excel.py  login.py  send_email.py
api/scheme/: basemodel.py
src/: class_handler.py
