[project]
name = "correo-excel"
version = "0.1.0"
description = ""
authors = [
    {name = "Johanyelbert Arevalo",email = "jarevalo@netnovation.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "argparse (>=1.4.0,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "fastapi (>=0.116.0,<0.117.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pymongo (>=4.16.0,<5.0.0)"
]

[tool.poetry]
packages = [{include = "correo_excel", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
